# accelerated-text-py

./: .gitignore  LICENCE  README.md  example_notebook.ipynb  requirements.txt  setup.cfg
acctext/: __init__.py  core.py  graphql.py  transforms.py
resources/: example_data.csv  example_notebook.ipynb
src/acctext/: __init__.py  core.py  graphql.py  transforms.py
