[metadata]
name = acctext
version = 0.9.0
author = Rokas Ramanauskas
author_email = rokas.ramanauskas@tokenmill.lt
description = Python wrapper for Accelerated Text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tokenmill/accelerated-text-py/
project_urls =
    Accelerated Text = https://github.com/tokenmill/accelerated-text/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
